[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
